// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Assessment page "loading" content renders correctly 1`] = `
<DocumentFragment>
  <div
    class="Assessment"
  >
    <div
      class="ContentDisplay row center-xs"
    >
      <div
        class="col-md-10 col-xs-11 contentdisplay-content-parent"
      >
        <div
          class="contentdisplay-content bp6-card bp6-elevation-3"
        >
          <div
            class="bp6-non-ideal-state bp6-non-ideal-state-vertical"
          >
            <div
              class="bp6-non-ideal-state-visual"
              style="font-size: 48px; line-height: 48px;"
            >
              <div
                aria-label="loading"
                aria-valuemax="100"
                aria-valuemin="0"
                class="bp6-spinner"
                role="progressbar"
              >
                <div
                  class="bp6-spinner-animation"
                >
                  <svg
                    height="50"
                    stroke-width="8.00"
                    viewBox="1.00 1.00 98.00 98.00"
                    width="50"
                  >
                    <path
                      class="bp6-spinner-track"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                    />
                    <path
                      class="bp6-spinner-head"
                      d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      pathLength="280"
                      stroke-dasharray="280 280"
                      stroke-dashoffset="210"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="bp6-non-ideal-state-text"
            >
              <div>
                Fetching assessment...
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Assessment page does not show attempt Button for upcoming assessments for student user 1`] = `
<DocumentFragment>
  <div
    class="Assessment"
  >
    <div
      class="ContentDisplay row center-xs"
    >
      <div
        class="col-md-10 col-xs-11 contentdisplay-content-parent"
      >
        <div
          class="contentdisplay-content bp6-card bp6-elevation-3"
        >
          <button
            class="bp6-button bp6-minimal collapse-button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp6-button-text"
            >
              Upcoming
            </span>
          </button>
          <div
            class="bp6-collapse"
            style="height: auto; overflow-y: visible; transition: none;"
          >
            <div
              aria-hidden="false"
              class="bp6-collapse-body"
              style="transform: translateY(0); transition: none;"
            >
              <div>
                <div
                  class="row listing bp6-card bp6-elevation-1"
                >
                  <div
                    class="listing-picture col-xs-3"
                  >
                    <img
                      alt="Assessment"
                      class="cover-image-not_attempted"
                      src="https://fakeimg.pl/300/"
                    />
                  </div>
                  <div
                    class="listing-text col-xs-9"
                  >
                    <div
                      class="listing-header"
                    >
                      <div
                        class="bp6-text-overflow-ellipsis"
                      >
                        <h4
                          class="bp6-heading listing-title"
                        >
                          An Odessey to Runes (Duplicate)
                        </h4>
                      </div>
                    </div>
                    <div
                      class="_listing-xp_6fa7d2"
                    >
                      <h6
                        class="bp6-heading"
                      >
                        Max XP: 1000
                      </h6>
                    </div>
                    <div
                      class="listing-description"
                    >
                      <div
                        class="md bp6-running-text"
                      >
                        <p>
                          This is a test for the UI of the unopened assessment overview. It links to the mock Mission 0
                        </p>
                      </div>
                    </div>
                    <div>
                      <h6
                        class="bp6-heading"
                      >
                         This is an individual assessment. 
                      </h6>
                    </div>
                    <div
                      class="listing-footer"
                    >
                      <div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-calendar listing-due-icon"
                          >
                            <svg
                              data-icon="calendar"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1m3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1M5 13H2v-3h3zm0-4H2V6h3zm4 4H6v-3h3zm0-4H6V6h3zm4 4h-3v-3h3zm0-4h-3V6h3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Opens: 18th June, 13:24
                        </div>
                      </div>
                      <div
                        class="listing-button"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="bp6-button bp6-minimal collapse-button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp6-button-text"
            >
              Open
            </span>
          </button>
          <div
            class="bp6-collapse"
            style="height: auto; overflow-y: visible; transition: none;"
          >
            <div
              aria-hidden="false"
              class="bp6-collapse-body"
              style="transform: translateY(0); transition: none;"
            >
              <div>
                <div
                  class="row listing bp6-card bp6-elevation-1"
                >
                  <div
                    class="listing-picture col-xs-3"
                  >
                    <img
                      alt="Assessment"
                      class="cover-image-attempting"
                      src="https://fakeimg.pl/350x200/?text=World&font=lobster"
                    />
                  </div>
                  <div
                    class="listing-text col-xs-9"
                  >
                    <div
                      class="listing-header"
                    >
                      <div
                        class="bp6-text-overflow-ellipsis"
                      >
                        <h4
                          class="bp6-heading listing-title"
                        >
                          The Secret to Streams
                        </h4>
                      </div>
                    </div>
                    <div
                      class="_listing-xp_6fa7d2"
                    >
                      <h6
                        class="bp6-heading"
                      >
                        Max XP: 1000
                      </h6>
                    </div>
                    <div
                      class="listing-description"
                    >
                      <div
                        class="md bp6-running-text"
                      >
                        <p>
                          Once upon a time, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec vulputate sapien. Fusce vel lacus fermentum, efficitur ipsum.
                        </p>
                      </div>
                    </div>
                    <div>
                      <h6
                        class="bp6-heading"
                      >
                         This is an individual assessment. 
                      </h6>
                    </div>
                    <div
                      class="listing-footer"
                    >
                      <div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-calendar listing-due-icon"
                          >
                            <svg
                              data-icon="calendar"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1m3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1M5 13H2v-3h3zm0-4H2V6h3zm4 4H6v-3h3zm0-4H6V6h3zm4 4h-3v-3h3zm0-4h-3V6h3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Opened: 18th July, 13:24
                        </div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-time listing-due-icon"
                          >
                            <svg
                              data-icon="time"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Due: 18th June, 13:24
                        </div>
                      </div>
                      <div
                        class="listing-button"
                      >
                        <a
                          class=""
                          data-discover="true"
                          href="/courses/undefined/missions/3/0"
                        >
                          <button
                            class="bp6-button bp6-minimal"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="bp6-icon bp6-icon-play"
                            >
                              <svg
                                data-icon="play"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M12 8c0-.35-.19-.64-.46-.82l.01-.02-6-4-.01.02A.97.97 0 005 3c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1 .21 0 .39-.08.54-.18l.01.02 6-4-.01-.02c.27-.18.46-.47.46-.82"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp6-button-text"
                            >
                              <span
                                data-testid="Assessment-Attempt-Button"
                              >
                                Continue
                              </span>
                              <span
                                class="custom-hidden-xxxs"
                              >
                                 Attempt
                              </span>
                            </span>
                          </button>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="row listing bp6-card bp6-elevation-1"
                >
                  <div
                    class="listing-picture col-xs-3"
                  >
                    <img
                      alt="Assessment"
                      class="cover-image-attempted"
                      src="https://fakeimg.pl/300/"
                    />
                  </div>
                  <div
                    class="listing-text col-xs-9"
                  >
                    <div
                      class="listing-header"
                    >
                      <div
                        class="bp6-text-overflow-ellipsis"
                      >
                        <h4
                          class="bp6-heading listing-title"
                        >
                          An Odessey to Runes
                        </h4>
                      </div>
                    </div>
                    <div
                      class="_listing-xp_6fa7d2"
                    >
                      <h6
                        class="bp6-heading"
                      >
                        Max XP: 1000
                      </h6>
                    </div>
                    <div
                      class="listing-description"
                    >
                      <div
                        class="md bp6-running-text"
                      >
                        <p>
                          <em>
                            Lorem ipsum
                          </em>
                           dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua.
                        </p>
                        

                        <pre>
                          <code>
                              const a = 5;

                          </code>
                        </pre>
                        

                        <p>
                          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
  
                          <em>
                            doloremque laudantium
                          </em>
                          , totam rem aperiam, eaque ipsa quae ab illo inventore
  
                          <a
                            href="google.com"
                          >
                            veritatis et quasi architecto
                          </a>
                           beatae vitae dicta sunt
  
                          <code>
                            explicabo
                          </code>
                          .
                        </p>
                      </div>
                    </div>
                    <div
                      class="listing-team_information"
                    >
                      <h6
                        class="bp6-heading"
                      >
                         This is a team assessment. 
                      </h6>
                    </div>
                    <div
                      class="listing-footer"
                    >
                      <div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-calendar listing-due-icon"
                          >
                            <svg
                              data-icon="calendar"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1m3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1M5 13H2v-3h3zm0-4H2V6h3zm4 4H6v-3h3zm0-4H6V6h3zm4 4h-3v-3h3zm0-4h-3V6h3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Opened: 18th June, 13:24
                        </div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-time listing-due-icon"
                          >
                            <svg
                              data-icon="time"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Due: 18th June, 13:24
                        </div>
                      </div>
                      <div
                        class="listing-button"
                      >
                        <a
                          class=""
                          data-discover="true"
                          href="/courses/undefined/missions/2/0"
                        >
                          <button
                            class="bp6-button bp6-minimal"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="bp6-icon bp6-icon-edit"
                            >
                              <svg
                                data-icon="edit"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48zM.99 14.99l3.86-1.39-2.46-2.44zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp6-button-text"
                            >
                              <span
                                data-testid="Assessment-Attempt-Button"
                              >
                                Review
                              </span>
                              <span
                                class="custom-hidden-xxxs"
                              >
                                 Attempt
                              </span>
                            </span>
                          </button>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="bp6-button bp6-minimal collapse-button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-caret-right"
            >
              <svg
                data-icon="caret-right"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp6-button-text"
            >
              Closed
            </span>
          </button>
          <div
            class="bp6-collapse"
          >
            <div
              aria-hidden="true"
              class="bp6-collapse-body"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Assessment page with 0 missions renders correctly 1`] = `
<DocumentFragment>
  <div
    class="Assessment"
  >
    <div
      class="ContentDisplay row center-xs"
    >
      <div
        class="col-md-10 col-xs-11 contentdisplay-content-parent"
      >
        <div
          class="contentdisplay-content bp6-card bp6-elevation-3"
        >
          <div
            class="bp6-non-ideal-state bp6-non-ideal-state-vertical"
          >
            <div
              class="bp6-non-ideal-state-visual"
              style="font-size: 48px; line-height: 48px;"
            >
              <span
                aria-hidden="true"
                class="bp6-icon bp6-icon-flame bp6-icon-muted"
                tabindex="-1"
              >
                <svg
                  data-icon="flame"
                  height="48"
                  role="img"
                  viewBox="0 0 20 20"
                  width="48"
                >
                  <path
                    d="M11.622 0q0 2.565 1.472 4.103Q18 7.693 18 12.308q0 5.128-5.887 7.692c2.887-3 2.453-4.23-.49-8C8.5 13.5 9 14.5 9.5 16.5c-1.048 0-2 0-2.5-.5 0 .684 1.197 2.5 1.952 4-3.924-1.026-8.123-7.18-6.651-7.692q1.472-.513 3.434.513Q3.282 3.59 11.622 0"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp6-non-ideal-state-text"
            >
              <h4
                class="bp6-heading"
              >
                There are no assessments.
              </h4>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Assessment page with multiple loaded missions renders correctly 1`] = `
<DocumentFragment>
  <div
    class="Assessment"
  >
    <div
      class="ContentDisplay row center-xs"
    >
      <div
        class="col-md-10 col-xs-11 contentdisplay-content-parent"
      >
        <div
          class="contentdisplay-content bp6-card bp6-elevation-3"
        >
          <button
            class="bp6-button bp6-minimal collapse-button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp6-button-text"
            >
              Upcoming
            </span>
          </button>
          <div
            class="bp6-collapse"
            style="height: auto; overflow-y: visible; transition: none;"
          >
            <div
              aria-hidden="false"
              class="bp6-collapse-body"
              style="transform: translateY(0); transition: none;"
            >
              <div>
                <div
                  class="row listing bp6-card bp6-elevation-1"
                >
                  <div
                    class="listing-picture col-xs-3"
                  >
                    <img
                      alt="Assessment"
                      class="cover-image-not_attempted"
                      src="https://fakeimg.pl/300/"
                    />
                  </div>
                  <div
                    class="listing-text col-xs-9"
                  >
                    <div
                      class="listing-header"
                    >
                      <div
                        class="bp6-text-overflow-ellipsis"
                      >
                        <h4
                          class="bp6-heading listing-title"
                        >
                          An Odessey to Runes (Duplicate)
                        </h4>
                      </div>
                    </div>
                    <div
                      class="_listing-xp_6fa7d2"
                    >
                      <h6
                        class="bp6-heading"
                      >
                        Max XP: 1000
                      </h6>
                    </div>
                    <div
                      class="listing-description"
                    >
                      <div
                        class="md bp6-running-text"
                      >
                        <p>
                          This is a test for the UI of the unopened assessment overview. It links to the mock Mission 0
                        </p>
                      </div>
                    </div>
                    <div>
                      <h6
                        class="bp6-heading"
                      >
                         This is an individual assessment. 
                      </h6>
                    </div>
                    <div
                      class="listing-footer"
                    >
                      <div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-calendar listing-due-icon"
                          >
                            <svg
                              data-icon="calendar"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1m3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1M5 13H2v-3h3zm0-4H2V6h3zm4 4H6v-3h3zm0-4H6V6h3zm4 4h-3v-3h3zm0-4h-3V6h3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Opens: 18th June, 13:24
                        </div>
                      </div>
                      <div
                        class="listing-button"
                      >
                        <a
                          class=""
                          data-discover="true"
                          href="/courses/undefined/missions/1/0"
                        >
                          <button
                            class="bp6-button bp6-minimal"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="bp6-icon bp6-icon-play"
                            >
                              <svg
                                data-icon="play"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M12 8c0-.35-.19-.64-.46-.82l.01-.02-6-4-.01.02A.97.97 0 005 3c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1 .21 0 .39-.08.54-.18l.01.02 6-4-.01-.02c.27-.18.46-.47.46-.82"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp6-button-text"
                            >
                              <span
                                data-testid="Assessment-Attempt-Button"
                              >
                                Attempt
                              </span>
                            </span>
                          </button>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="bp6-button bp6-minimal collapse-button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-caret-down"
            >
              <svg
                data-icon="caret-down"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp6-button-text"
            >
              Open
            </span>
          </button>
          <div
            class="bp6-collapse"
            style="height: auto; overflow-y: visible; transition: none;"
          >
            <div
              aria-hidden="false"
              class="bp6-collapse-body"
              style="transform: translateY(0); transition: none;"
            >
              <div>
                <div
                  class="row listing bp6-card bp6-elevation-1"
                >
                  <div
                    class="listing-picture col-xs-3"
                  >
                    <img
                      alt="Assessment"
                      class="cover-image-attempting"
                      src="https://fakeimg.pl/350x200/?text=World&font=lobster"
                    />
                  </div>
                  <div
                    class="listing-text col-xs-9"
                  >
                    <div
                      class="listing-header"
                    >
                      <div
                        class="bp6-text-overflow-ellipsis"
                      >
                        <h4
                          class="bp6-heading listing-title"
                        >
                          The Secret to Streams
                        </h4>
                      </div>
                    </div>
                    <div
                      class="_listing-xp_6fa7d2"
                    >
                      <h6
                        class="bp6-heading"
                      >
                        Max XP: 1000
                      </h6>
                    </div>
                    <div
                      class="listing-description"
                    >
                      <div
                        class="md bp6-running-text"
                      >
                        <p>
                          Once upon a time, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec vulputate sapien. Fusce vel lacus fermentum, efficitur ipsum.
                        </p>
                      </div>
                    </div>
                    <div>
                      <h6
                        class="bp6-heading"
                      >
                         This is an individual assessment. 
                      </h6>
                    </div>
                    <div
                      class="listing-footer"
                    >
                      <div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-calendar listing-due-icon"
                          >
                            <svg
                              data-icon="calendar"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1m3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1M5 13H2v-3h3zm0-4H2V6h3zm4 4H6v-3h3zm0-4H6V6h3zm4 4h-3v-3h3zm0-4h-3V6h3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Opened: 18th July, 13:24
                        </div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-time listing-due-icon"
                          >
                            <svg
                              data-icon="time"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Due: 18th June, 13:24
                        </div>
                      </div>
                      <div
                        class="listing-button"
                      >
                        <a
                          class=""
                          data-discover="true"
                          href="/courses/undefined/missions/3/0"
                        >
                          <button
                            class="bp6-button bp6-minimal"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="bp6-icon bp6-icon-play"
                            >
                              <svg
                                data-icon="play"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M12 8c0-.35-.19-.64-.46-.82l.01-.02-6-4-.01.02A.97.97 0 005 3c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1 .21 0 .39-.08.54-.18l.01.02 6-4-.01-.02c.27-.18.46-.47.46-.82"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp6-button-text"
                            >
                              <span
                                data-testid="Assessment-Attempt-Button"
                              >
                                Continue
                              </span>
                              <span
                                class="custom-hidden-xxxs"
                              >
                                 Attempt
                              </span>
                            </span>
                          </button>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="row listing bp6-card bp6-elevation-1"
                >
                  <div
                    class="listing-picture col-xs-3"
                  >
                    <img
                      alt="Assessment"
                      class="cover-image-attempted"
                      src="https://fakeimg.pl/300/"
                    />
                  </div>
                  <div
                    class="listing-text col-xs-9"
                  >
                    <div
                      class="listing-header"
                    >
                      <div
                        class="bp6-text-overflow-ellipsis"
                      >
                        <h4
                          class="bp6-heading listing-title"
                        >
                          An Odessey to Runes
                        </h4>
                      </div>
                    </div>
                    <div
                      class="_listing-xp_6fa7d2"
                    >
                      <h6
                        class="bp6-heading"
                      >
                        Max XP: 1000
                      </h6>
                    </div>
                    <div
                      class="listing-description"
                    >
                      <div
                        class="md bp6-running-text"
                      >
                        <p>
                          <em>
                            Lorem ipsum
                          </em>
                           dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  incididunt ut labore et dolore magna aliqua.
                        </p>
                        

                        <pre>
                          <code>
                              const a = 5;

                          </code>
                        </pre>
                        

                        <p>
                          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
  
                          <em>
                            doloremque laudantium
                          </em>
                          , totam rem aperiam, eaque ipsa quae ab illo inventore
  
                          <a
                            href="google.com"
                          >
                            veritatis et quasi architecto
                          </a>
                           beatae vitae dicta sunt
  
                          <code>
                            explicabo
                          </code>
                          .
                        </p>
                      </div>
                    </div>
                    <div
                      class="listing-team_information"
                    >
                      <h6
                        class="bp6-heading"
                      >
                         This is a team assessment. 
                      </h6>
                    </div>
                    <div
                      class="listing-footer"
                    >
                      <div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-calendar listing-due-icon"
                          >
                            <svg
                              data-icon="calendar"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1m3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1M5 13H2v-3h3zm0-4H2V6h3zm4 4H6v-3h3zm0-4H6V6h3zm4 4h-3v-3h3zm0-4h-3V6h3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Opened: 18th June, 13:24
                        </div>
                        <div
                          class="listing-due-date"
                        >
                          <span
                            aria-hidden="true"
                            class="bp6-icon bp6-icon-time listing-due-icon"
                          >
                            <svg
                              data-icon="time"
                              height="12"
                              role="img"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <path
                                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          Due: 18th June, 13:24
                        </div>
                      </div>
                      <div
                        class="listing-button"
                      >
                        <a
                          class=""
                          data-discover="true"
                          href="/courses/undefined/missions/2/0"
                        >
                          <button
                            class="bp6-button bp6-minimal"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="bp6-icon bp6-icon-edit"
                            >
                              <svg
                                data-icon="edit"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <path
                                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48zM.99 14.99l3.86-1.39-2.46-2.44zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp6-button-text"
                            >
                              <span
                                data-testid="Assessment-Attempt-Button"
                              >
                                Review
                              </span>
                              <span
                                class="custom-hidden-xxxs"
                              >
                                 Attempt
                              </span>
                            </span>
                          </button>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="bp6-button bp6-minimal collapse-button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-caret-right"
            >
              <svg
                data-icon="caret-right"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M11 8c0-.15-.07-.28-.17-.37l-4-3.5A.495.495 0 006 4.5v7a.495.495 0 00.83.37l4-3.5c.1-.09.17-.22.17-.37"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp6-button-text"
            >
              Closed
            </span>
          </button>
          <div
            class="bp6-collapse"
          >
            <div
              aria-hidden="true"
              class="bp6-collapse-body"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
